# rgcd

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: rgcd.R
man/: vector_multiply.Rd
src/: Makevars  gcd_r.c  gcd_r.h
test/: test.R
